--- a/src/Arra.SharedKernel/Arra.SharedKernel.csproj
+++ b/src/Arra.SharedKernel/Arra.SharedKernel.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Arra.SharedKernel\Arra.SharedKernel.csproj" />
+    <PackageReference Include="MediatR.Contracts" Version="2.0.1" />
   </ItemGroup>
 
 </Project>
