--- a/src/Arra.Domain/Arra.Domain.csproj
+++ b/src/Arra.Domain/Arra.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="8.0.13" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Arra.SharedKernel\Arra.SharedKernel.csproj" />
   </ItemGroup>
 
