--- a/src/Arra.Api/appsettings.json
+++ b/src/Arra.Api/appsettings.json
@@ -5,5 +5,20 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JwtOptions": {
+    "Issuer": "https://localhost:7218",
+    "Audience": "https://localhost:7218",
+    "SecretKey": "YourSuperSecureLongSecretKeyHere123!",
+    "ExpirationMinutes": 30
+  },
+  "AdminOptions": {
+    "FirstName": "Umidbek",
+    "LastName": "Maxammadsoliyev",
+    "Email": "makhammadsoliyev@gmail.com",
+    "Password": "Book2025!@#$"
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;User Id=root;Database=arra;Trusted_Connection=True;Encrypt=false;TrustServerCertificate=true;"
+  }
 }
