--- a/src/Arra.Application/Arra.Application.csproj
+++ b/src/Arra.Application/Arra.Application.csproj
@@ -6,4 +6,13 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.11.0" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Arra.Domain\Arra.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
